<resources>
    <string name="app_name">InventarioApp</string>

    <string name="lbl_nombre_empresa">Nombre de la empresa</string>
    <string name="hint_nombre_empresa">Razón social / Nombre comercial</string>
    <string name="lbl_ruc">RUC</string>
    <string name="hint_ruc">Ingrese el número de RUC</string>
    <string name="cb_es_nacional">Es un proveedor Nacional</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="hint_direccion">Ingrese dirección física</string>
    <string name="lbl_datos_contacto">Datos del contacto directo</string>
    <string name="lbl_nombre_contacto">Ingrese el nombre del contacto</string>
    <string name="hint_nombre_contacto">Ingrese el nombre del contacto</string>
    <string name="lbl_correo">Correo electrónico</string>
    <string name="hint_correo">Ingrese el correo</string>
    <string name="lbl_telefono">Teléfono / Celular</string>
    <string name="hint_telefono">Ingrese número de contacto</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_producto">Descripción del producto</string>

    <string name="image_url_hint">https://ejemplo.com/imagen.jpg</string>
    <string name="load_image">Cargar Imagen</string>
    <string name="product_image">Imagen del producto</string>
</resources>